# vim_finesse

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/backend-rs/: Cargo.toml  build.rs
backend/backend-rs/protos/: user.proto
backend/backend-rs/src/: main.rs
backend/backend-rs/src/api/: challenge.rs  user.rs
backend/backend-rs/src/db/: conn.rs
backend/backend-rs/src/model/: challenge.rs  user.rs
backend/backend-rs/src/proto/: user.rs
backend/migrations/: 20231108072043_initial_migration.down.sql  20231108072043_initial_migration.up.sql
backend/src/: main.rs
backend/src/api/: challenge.rs  mod.rs  user.rs
backend/src/db/: conn.rs  mod.rs
backend/src/model/: user.rs
backend/src/proto/: mod.rs  user.rs
client/: .dockerignore  package-lock.json  package.json  tailwind.config.js
client/nginx/: nginx.conf
client/public/: index.html  vim.js
client/public/react-vim-wasm/: index.d.ts  index.js
client/src/: App.js  constants.js  index.css  index.html  index.js
client/src/components/: Script.js  VimEditor.css  VimEditor.js  VimEditor.tsx  VimPane.tsx  vim.js  vimwasm.js
client/src/components/Home/: Body.js  Body.tsx  Footer.js  Footer.tsx  Header.js  Header.tsx
client/src/components/Home/Header/: Login.tsx
client/src/components/Home/Play/: Challenge.js  Challenge.tsx
client/src/functions/: helpers.tsx
client/src/layouts/: BaseLayout.js
client/src/pages/: About.tsx  Home.js  Home.tsx  Login.js  Login.tsx  Play.js  Play.tsx  Profile.js  Profile.tsx  Tutorial.tsx
vim-finesse/: Cargo.toml
vim-finesse/entity/: Cargo.toml
vim-finesse/entity/src/: lib.rs  note.rs
vim-finesse/migration/: Cargo.toml
vim-finesse/migration/src/: main.rs
web-task-service/: Cargo.toml
web-task-service/src/: main.rs
web-task-service/src/api/: task.rs
web-task-service/src/model/: task.rs
web-task-service/src/repository/: ddb.rs  mod.rs
