[package]
name = "vim-finesse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.async-graphql]
version = "6.0.7"

[dependencies.sea-orm]
version = "0.12.3"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
default-features = false
