[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.1"
uuid = { version = "1.5.0", features = ["v4"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["rt", "macros"] }
prost = "0.12.1"
bytes = "1.5.0"

[build-dependencies]
prost-build = "0.12.1"
